--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropdown": "^1.6.4",
+    "react-lottie": "^1.2.3",
     "react-scripts": "2.1.8",
     "regex": "^0.1.1",
     "semantic-ui-react": "^0.86.0",
